--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ansicolor
-version: 0.0.8
+version: 0.0.9
 author: John Thomas McDole <codefu@google.com>
 description: An xterm 256 color support library
 homepage: https://github.com/google/ansicolor-dart
 dev_dependencies:
-  unittest: any
+  unittest: ">=0.6.19"
