--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,4 +4,4 @@ author: John Thomas McDole <codefu@google.com>
 description: An xterm 256 color support library
 homepage: https://github.com/google/ansicolor-dart
 dev_dependencies:
-  unittest: ">=0.6.19"
+  test: ">=0.12.18"
