--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,5 +3,7 @@ version: 0.0.10
 author: John Thomas McDole <codefu@google.com>
 description: An xterm 256 color support library
 homepage: https://github.com/google/ansicolor-dart
+environment:
+    sdk: '<2.0.0'
 dev_dependencies:
   test: ">=0.12.18"
