--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: ansicolor
-version: 0.0.10
+version: 0.1.1
 author: John Thomas McDole <codefu@google.com>
 description: An xterm 256 color support library
 homepage: https://github.com/google/ansicolor-dart
 environment:
-    sdk: '<2.0.0'
+  sdk: ">=1.0.0 <2.0.0"
 dev_dependencies:
   test: ">=0.12.18"
