--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,8 @@
 name: ansicolor
-version: 1.0.0
-author: John Thomas McDole <codefu@google.com>
+version: 1.0.1
+authors:
+- John Thomas McDole <codefu@google.com>
+- Jason Daly <dalyj@google.com>
 description: An xterm 256 color support library
 homepage: https://github.com/google/ansicolor-dart
 environment:
