--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,11 @@
 name: ansicolor
 version: 1.0.4
-authors:
-- John Thomas McDole <codefu@google.com>
-- Jason Daly <dalyj@google.com>
 description: >-
   Looking to add some color to your terminal logs? `ansicolor` is an xterm-256
   color support library that lets you change the foreground and background
   color of your text.
 homepage: https://github.com/google/ansicolor-dart
 environment:
-  sdk: ">=2.0.0-dev.36.0 <3.0.0"
+  sdk: ">=2.0.0 <3.0.0"
 dev_dependencies:
   test: ">=0.12.18"
