--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: ansicolor
-version: 1.1.1
+version: 2.0.0-nullsafety.0
 description: >-
   Looking to add some color to your terminal logs? `ansicolor` is an xterm-256
   color support library that lets you change the foreground and background
   color of your text.
 homepage: https://github.com/google/ansicolor-dart
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: ">=2.12.0-29.10.beta <3.0.0"
 dev_dependencies:
-  test: ">=0.12.18"
+  test: ">=1.16.0-nullsafety.12"
