--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: ansicolor
-version: 2.0.2-dev
+version: 2.0.2
 description: >-
   Looking to add some color to your terminal logs? `ansicolor` is an xterm-256
   color support library that lets you change the foreground and background
   color of your text.
 repository: https://github.com/google/ansicolor-dart
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 dev_dependencies:
   test: ^1.16.8
