--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,4 +8,5 @@ repository: https://github.com/google/ansicolor-dart
 environment:
   sdk: ">=3.0.0 <4.0.0"
 dev_dependencies:
+  lints: ^2.1.1
   test: ^1.16.8
