--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ pubspec.lock
 .dart_tool
 .packages
 *~
+
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.pub-cache/
+.pub/
+/build/
